# Kal_Network

./: CMakeLists.txt  ClientSocket.cpp  KalNet.cpp  KalServer.cpp  KalServer.h  README.md  ServerSocket.cpp  ServerSocket.h  SocketHandler.cpp  SocketHandler.h  StringHelp.h
Kal's_Network/: BindingSocket.cpp  BindingSocket.h  ConnectingSocket.cpp  ConnectingSocket.h  Kal_Server.cpp  Kal_Server.h  Kals_Network.cpp  Kals_Network.sln  Kals_Network.vcxproj  Kals_Network.vcxproj.filters  ListeningSocket.cpp  ListeningSocket.h  SimpleSocket.cpp  SimpleSocket.h  Test_Server.cpp  Test_Server.h  mntlibc_network.cpp  mntlibc_network.h  mntlibc_servers.h  mntlibc_sockets.cpp  mntlibc_sockets.h  test.cpp
Kal's_Network/Kals_Network/x64/Debug/: Kals_Network.exe.recipe  Kals_Network.ilk  vc143.idb
Kal's_Network/Kals_Network/x64/Debug/Kals_Network.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Kals_Network.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
KalNet/: ClientSocket.cpp  ClientSocket.h  Includes.h  KalNet.vcxproj  KalNet.vcxproj.filters  KalServer.cpp  KalServer.h  ServerSocket.cpp  ServerSocket.h  SocketHandler.cpp  SocketHandler.h  WSAinitializer.h  main.cpp
KalNet/KalNet/: KalNet.sln  KalNet.vcxproj  KalNet.vcxproj.filters  KalServer.cpp  KalServer.h  ServerSocket.cpp  ServerSocket.h  WSAinitializer.cpp  main.cpp
KalNet/KalNet/KalNet/x64/Debug/: KalNet.ilk  vc143.idb
KalNet/KalNet/x64/Debug/: KalNet.exe.recipe  KalNet.ilk  vc143.idb
KalNet/KalNet/x64/Debug/KalNet.tlog/: CL.command.1.tlog  (+8 more)
(+8 files in other folders)
